--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3'
 services:
   web:
     build: .
@@ -6,3 +6,5 @@ services:
       - "5001:5000"
     volumes:
       - .:/usr/src/app
+    deploy:
+      replicas: 2
