--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
 version: '3'
 services:
   web:
-    build: .
+    image: catweb:latest
     ports:
       - "5001:5000"
     volumes:
       - .:/usr/src/app
     deploy:
-      replicas: 2
+      replicas: 3
+      restart_policy:
+        condition: on-failure
