--- a/catweb-deployment.yaml
+++ b/catweb-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: catweb-deployment
+  name: webcat-deployment
   labels:
     app: webcat
 spec:
