--- a/kube-deployment.yaml
+++ b/kube-deployment.yaml
@@ -29,7 +29,8 @@ spec:
     spec:
       containers:
       - name: catweb-app
-        image: dtr.west.us.se.dckr.org/se-jasatwal/catweb
+        image: dtr.eu.demo.mirantis.com/jatwal-dev/catweb
+        #image: dtr.west.us.se.dckr.org/se-jasatwal/catweb
         ports:
         - containerPort: 5000
 
@@ -40,14 +41,16 @@ kind: Ingress
 metadata:
   annotations:
     kubectl.kubernetes.io/last-applied-configuration: |
-      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{},"name":"catweb-nginx-ingress","namespace":"se-jasatwal"},"spec":{"rules":[{"host":"catweb-nginx.jasatwal.kube.west.us.se.dckr.org","http":{"paths":[{"backend":{"serviceName":"catweb-nginx-service","servicePort":80}}]}}]}}
+      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{},"name":"catweb-nginx-ingress","namespace":"jatwal-dev"},"spec":{"rules":[{"host":"catweb-nginx-ingress.jatwal.kube.eu.demo.mirantis.com","http":{"paths":[{"backend":{"serviceName":"catweb-nginx-service","servicePort":80}}]}}]}}
   creationTimestamp: null
   generation: 1
   name: catweb-nginx-ingress
-  selfLink: /apis/extensions/v1beta1/namespaces/se-jasatwal/ingresses/catweb-nginx-ingress
+  selfLink: /apis/extensions/v1beta1/namespaces/jatwal-dev/ingresses/catweb-nginx-ingress
+  #selfLink: /apis/extensions/v1beta1/namespaces/se-jasatwal/ingresses/catweb-nginx-ingress
 spec:
   rules:
-  - host: catweb-nginx.jasatwal.kube.west.us.se.dckr.org
+  - host: catweb-nginx-ingress.jatwal-dev.kube.eu.demo.mirantis.com
+  - #host: catweb-nginx.jasatwal.kube.west.us.se.dckr.org
     http:
       paths:
       - backend:
